-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.1
-
Ubuntu 11.04, Solaris 10
-
1ee610f8fd1195026405a6f2da0d213c5da8816a
If compiling with those flags mentioned in the summary field it causes a crash:
"access/qhttpthreaddelegate.cpp", line 348: Error: Too few arguments in call to "qWarning(const char*, ...)".
"access/qhttpthreaddelegate.cpp", line 404: Error: Too few arguments in call to "qWarning(const char*, ...)".
and in here:
line 785 in qt/src/network/access/qnetworkreplyimpl.cpp to this:
The error can be fixed by changing the
qWarning() << "some text";
to
qWarning("some text");
For Gerrit Dashboard: QTBUG-25308 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
23599,2 | Fix build with QT_NO_WARNING_OUTPUT | 4.8 | qt/qt | Status: MERGED | +2 | 0 |